fix image overlaping

--- a/src/components/HeroBanner/styles.css
+++ b/src/components/HeroBanner/styles.css
@@ -34,6 +34,7 @@
 }
 .herobanner__image {
   max-width: 100%;
+  width: 100%;
 }
 
 
